# langchain-learn

./: README.md  main.py  pyproject.toml
1-Models/1-LLMs/: llm_demo.py
1-Models/2-ChatModel/: 1_chatmodel_openai.py  2_chatmodel_gemini.py  3_chatmodel_hf.py
1-Models/3-Embedding/: 1_emb_openai.py  2_emb_openai_docs.py  3_emb_hf_local.py
2-Prompts/: 1_prompt_ui.py
